[build-system]
requires = ["setuptools>=44"]
build-backend = "setuptools.build_meta"

[project]
name = "imaids"
authors = [{ name = "lnls-ima" } ]
maintainers = [
  {name = "Gabriel Rezende de Ascenção", email = "gabriel.ascencao@lnls.br"},
  {name = "Lucas Francisco"},
]
description = "Insertion Devices Package"
readme = "README.md"
dynamic = ["version", "dependencies"]
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
keywords = ["SIRIUS", "python", "Accelerator Physics", "Insertion Devices"]

license = "MIT"
license-files= [ "LICENSE", ]

[project.urls]
Homepage = "https://github.com/lnls-ima/insertion-devices"
Download = "https://github.com/lnls-ima/insertion-devices"
Repository = "https://github.com/lnls-ima/insertion-devices.git"
Issues = "https://github.com/lnls-ima/insertion-devices/issues"

[project.optional-dependencies]
tests = ["nose"]

# --- Setuptools specific configurations ---
[tool.setuptools]
packages = ["imaids"]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
dependencies = { file = "requirements.txt" }

[tool.setuptools.package-data]
imaids = ["VERSION", "presets/*"]
